@@ -1,4 +1,4 @@
-/* $Id: client.c,v 1.15 2007-10-22 13:16:36 nicm Exp $ */
+/* $Id: client.c,v 1.16 2007-10-23 09:36:19 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -115,6 +115,8 @@ retry:
 
 		data.sx = ws.ws_col;
 		data.sy = ws.ws_row;
+		if (ttyname_r(STDIN_FILENO, data.tty, sizeof data.tty) != 0)
+			fatal("ttyname_r failed");
 		client_write_server(cctx, MSG_IDENTIFY, &data, sizeof data);
 	}
 
