@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.18 2007-10-19 11:10:35 nicm Exp $ */
+/* $Id: cmd.c,v 1.19 2007-10-23 09:36:19 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -29,6 +29,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_detach_session_entry,
 	&cmd_kill_window_entry,
 	&cmd_last_window_entry,
+	&cmd_list_clients_entry,
 	&cmd_list_keys_entry,
 	&cmd_list_sessions_entry,
 	&cmd_list_windows_entry,
