@@ -1,3 +1,9 @@
+23 October 2007
+
+* (nicm) Show size in session/window lists.
+* (nicm) Pass tty up to server when client identifies and add a list-clients
+  command to list connected clients.
+
 20 October 2007
 
 * (nicm) Add default-command option and change default to be $SHELL rather than
@@ -144,5 +150,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.46 2007-10-20 09:57:08 nicm Exp $
+$Id: CHANGES,v 1.47 2007-10-23 09:36:19 nicm Exp $
 
